[tool.poetry]
name = "edge_sim_py"
version = "0.1.0"
description = ""
authors = ["Paulo Severo <opaulosevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
networkx = "^2.6.1"
jupyter = "^1.0.0"
ipykernel = "^6.0.3"
matplotlib = "^3.5.1"
pygraphviz = "^1.7"
PyQt5 = "^5.15.6"
cdlib = "^0.2.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
